docker: Fix layout of container terminal/logs on details page
This should stay at the bottom of teh page unless the page is
very wide. In addition there should be appropriate gaps between
the table and terminal/logs on this page.

--- a/pkg/docker/docker.css
+++ b/pkg/docker/docker.css
@@ -125,9 +125,18 @@
     height: 28px;
 }
 
-#container-details .console-ct {
-    margin-top: 0;
-    float: right;
+#container-details .info-table-ct {
+    margin-bottom: 30px;
+}
+
+@media (min-width: 1200px) {
+    #container-details .info-table-ct {
+        float: left;
+    }
+    #container-details .console-ct {
+        margin-top: 0;
+        float: right;
+    }
 }
 
 #containers-search-image-dialog .modal-body {
